<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tvAlphabeticalAsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/alphabetical_asc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvAlphabeticalDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/alphabetical_desc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvRatingAsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/rating_asc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvRatingDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/rating_desc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/clear_sort"
        android:textSize="18sp" />

</LinearLayout>